--- a/backend/composer.json
+++ b/backend/composer.json
@@ -71,7 +71,7 @@
             "./vendor/bin/pint"
         ],
         "stan": [
-            "./vendor/bin/phpstan analyse"
+            "./vendor/bin/phpstan analyse --memory-limit=512M"
         ]
     },
     "extra": {
